--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>
       Ionic Blank
@@ -11,4 +11,48 @@
     The world is your oyster.
     <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
   </div>
-</ion-content>
+</ion-content> -->
+<ion-header>
+  <ion-toolbar text-center color="dark">
+    <!-- <ion-buttons end>
+      <button ion-button icon-only (tap)="refresh();">
+        <ion-icon md="ios-refresh" style="color:white"></ion-icon>
+      </button>
+    </ion-buttons> -->
+    <ion-title>
+      Optical Character Recognition 
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content padding>
+    <ion-button expand="block"  color="primary" (tap)="viewNotes();">
+        <ion-icon md="ios-paper" style="color:white;margin-right:10px" ></ion-icon>
+        View Notes
+      </ion-button>
+ 
+      <ion-button expand="block"  color="success" (tap)="chooseImage();">
+          <ion-icon md="ios-images" style="color:white;margin-right:10px" ></ion-icon>
+          Select Image
+        </ion-button>
+
+        <ion-button expand="block"  color="danger" (tap)="recog();"  [disabled]="!selectedImage" >
+            <ion-icon md="ios-barcode"  style="color:white;margin-right:10px" ></ion-icon>
+            Recognize Text
+          </ion-button>
+
+    <ion-row  *ngIf="imageText">
+          <ion-button  (tap)="speak();">
+              <ion-icon md="ios-mic" style="margin-right:10px"></ion-icon> Speak
+            </ion-button>
+    </ion-row>
+    
+  <img [src]="selectedImage" *ngIf="selectedImage">
+  <ion-card text-center *ngIf="imageText">
+    <ion-card-header>
+      Text Result
+    </ion-card-header>
+  
+    <ion-card-content> {{imageText}} </ion-card-content>
+  </ion-card>
+  </ion-content>
+  
