--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -46,6 +46,11 @@
                 <ion-icon md="md-document" style="margin-right:10px"></ion-icon> Save As Pdf
               </ion-button>
         </ion-row>
+         <ion-row  >
+            <ion-button  (tap)="saveDoc();" >
+                <ion-icon md="md-document" style="margin-right:10px"></ion-icon> Save As Doc
+              </ion-button>
+        </ion-row>
 
     
   <img [src]="selectedImage" *ngIf="selectedImage">
